# montecarlo_rust

./: .gitignore  Cargo.toml
src/: main.rs
src/dice/: mod.rs
src/mc/: mod.rs
src/sim/: mod.rs
src/sim/benir/: mod.rs
src/sim/ignis/: mod.rs
