[package]
name = "mc_l2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossbeam = "0.8.2"
error-chain = "0.12.4"
lazy_static = "1.4.0"
num_cpus = "1.14.0"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["rc"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"] }
